Basic setup for project, including first note

--- a/_includes/base-layout.njk
+++ b/_includes/base-layout.njk
@@ -3,16 +3,25 @@
 <head> 
   <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1" /> 
-  <title>Eleventy Blog</title> 
+  <title>bnijenhuis</title> 
+  <style>body { font-family: sans-serif; font-size: 1.6rem; line-height: 1.4; } main { margin: 0 auto; max-width: 800px; }</style>
 </head> 
-<body> 
-  <header>
-    Site Header
-    <a href="/About">About</a>
-  </header> 
+<body>
   <main> 
     {{ content | safe }}
   </main> 
-  <footer>Site Footer</footer> 
 </body> 
+</html>
+
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>My Blog</title>
+    </head>
+    <body>
+        <h1>{{ pageTitle }}</h1>
+
+        {{ content }}
+    </body>
 </html>
