No real need for my birth year

--- a/index.njk
+++ b/index.njk
@@ -3,7 +3,7 @@ layout: layout.liquid
 pageTitle: bnijenhuis
 ---
 
-<p>Bernard Nijenhuis • Front-end Developer • 1983 • Katwijk, The Netherlands • Father of 3 kids • Husband to 1 wife • Owner of 2 cats</p>
+<p>Bernard Nijenhuis • Front-end Developer • Katwijk, The Netherlands • Father of 3 kids • Husband to 1 wife • Owner of 2 cats</p>
 
 <h2>Notes</h2>
 <ul>
