--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" /> 
   <meta name="description" content="Bernard Nijenhuis • Front-end Developer • Katwijk, The Netherlands • Father of 3 kids • Husband to 1 wife • Owner of 2 cats" />
   <title>bnijenhuis</title> 
+  
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/manifest.webmanifest">
+
   <style>body { font-family: sans-serif; font-size: 1.6rem; line-height: 1.4; } main { margin: 0 auto; width: 90vw; width: clamp(16rem, 90vw, 50rem); } pre { padding: 2rem 0; overflow: auto; }</style>
 </head> 
 <body>
