Added note about favicons

--- a/index.njk
+++ b/index.njk
@@ -1,13 +1,17 @@
 ---
 layout: layout.liquid
 pageTitle: bnijenhuis
+pagination:
+ data: collections.notes
+ size: 5
+ reverse: true
 ---
 
 <p>Bernard Nijenhuis • Front-end Developer • Katwijk, The Netherlands • Father of 3 kids • Husband to 1 wife • Owner of 2 cats</p>
 
 <h2>Notes</h2>
 <ul>
-{% for note in collections.notes | reverse %}
+{% for note in pagination.items %}
     <li><a href="{{ note.url | url }}"><time datetime="{{ note.data.date | postDate }}">{{ note.data.date | readablePostDate }}</time> - {{ note.data.pageTitle }}</a></li>
 {% endfor %}
 </ul>
