Some textual changes

--- a/index.njk
+++ b/index.njk
@@ -9,10 +9,10 @@ pagination:
 
 <p>Bernard Nijenhuis • Front-end Developer • Katwijk, The Netherlands • Father of 3 kids • Husband to 1 wife • Owner of 2 cats</p>
 
-<h2>Notes</h2>
+<h2>Most recent notes</h2>
 <ul>
 {% for note in pagination.items %}
     <li><a href="{{ note.url | url }}"><time datetime="{{ note.data.date | postDate }}">{{ note.data.date | readablePostDate }}</time> - {{ note.data.pageTitle }}</a></li>
 {% endfor %}
 </ul>
-<p><a href="/feed.xml" title="Feed of all notes">Feed of all notes</a></p>
+<p>Check <a href="/notes/" title="All notes">all notes</a> or follow the <a href="/feed.xml" title="Feed of all notes">feed of all notes</a>.</p>
