Added css file (including fonts)

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -11,7 +11,8 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/manifest.webmanifest">
 
-  <style>body { font-family: sans-serif; font-size: 1.6rem; line-height: 1.4; } main { margin: 0 auto; width: 90vw; width: clamp(16rem, 90vw, 50rem); } pre { padding: 2rem 0; overflow: auto; }</style>
+  <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
+  
 </head> 
 <body>
   <main> 
