Changes text for notes

--- a/index.njk
+++ b/index.njk
@@ -15,4 +15,4 @@ pagination:
     <li><a href="{{ note.url | url }}"><time datetime="{{ note.data.date | postDate }}">{{ note.data.date | readablePostDate }}</time> - {{ note.data.pageTitle }}</a></li>
 {% endfor %}
 </ul>
-<p>Check <a href="/notes/" title="All notes">all notes</a> or follow the <a href="/feed.xml" title="Feed of all notes">feed of all notes</a>.</p>
+<p>These are the 5 most recent notes. You can check out <a href="/notes/" title="All notes">all my notes</a> or follow the <a href="/feed.xml" title="Feed of all my notes">feed of all my notes</a>.</p>
