--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -1,10 +1,19 @@
 @font-face {
-    font-family: 'Asap';
-    src: url('/fonts/Asap-VariableFont_wght.woff2') format('woff2-variations'),
-        url('/fonts/Asap-Regular.woff2') format('woff2');
+    font-family: Asap;
+    src: url('/fonts/Asap-VariableFont_wght.woff2') format('woff2 supports variations'),
+         url('/fonts/Asap-VariableFont_wght.woff2') format('woff2-variations');
     font-weight: 400 700;
     font-display: swap;
     font-style: normal;
+}
+
+@font-face {
+    font-family: Asap;
+    src: url('/fonts/Asap-Italic-VariableFont_wght.woff2') format('woff2 supports variations'),
+         url('/fonts/Asap-Italic-VariableFont_wght.woff2') format('woff2-variations');
+    font-weight: 400 700;
+    font-display: swap;
+    font-style: italic;
 }
 
 body { 
