Added text and link to note about unhurried development

--- a/index.njk
+++ b/index.njk
@@ -13,3 +13,4 @@ pageTitle: bnijenhuis
 {% endfor %}
 </ul>
 <p>These are the 5 most recent notes. You can check out <a href="/notes/" title="All notes">all my notes</a> or follow the <a href="/feed.xml" title="Feed of all my notes">feed of all my notes</a>.</p>
+<p>If you're wondering why the style is so basic I suggest you read my note about <a href="/notes/2021-03-01-unhurried-development/" title="Unhurried Development">Unhurried Development</a>.</p>
