--- a/_includes/post-layout.liquid
+++ b/_includes/post-layout.liquid
@@ -1,6 +1,9 @@
 ---
 layout: layout.liquid
 ---
+
+<h1>{{ pageTitle }}</h1>
+
 <p>Posted on: <time datetime="{{ page.date | postDate }}">{{ page.date | readablePostDate }}</time></p>
 
 {{ content }}
