Use specific layout and added links to social media

--- a/index.njk
+++ b/index.njk
@@ -1,9 +1,11 @@
 ---
-layout: layout.liquid
-pageTitle: bnijenhuis
+layout: home-layout.liquid
+pageTitle: About me
 ---
 
 <p>Bernard Nijenhuis • Front-end Developer • Katwijk, The Netherlands • Father of 3 kids • Husband to 1 wife • Owner of 2 cats</p>
+
+<p>You can find me on <a href="https://twitter.com/bnijenhuis/">Twitter</a>, <a href="https://www.instagram.com/bnijenhuis/">Instagram</a>, <a href="https://www.linkedin.com/in/bernardnijenhuis/">LinkedIn</a> and <a href="https://github.com/bnijenhuis/">GitHub</a>.</p>
 
 <h2>Most recent notes</h2>
 <ul>
