--- a/notes/index.njk
+++ b/notes/index.njk
@@ -1,9 +1,8 @@
 ---
 layout: layout.liquid
 eleventyExcludeFromCollections: true
+pageTitle: Notes
 ---
-
-<h1>Notes</h1>
 
 <p>This is the collection of all the notes I've written.</p>
 
