Added filter to cache bust files

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -11,7 +11,7 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/manifest.webmanifest">
 
-  <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
+  <link rel="stylesheet" href="{{ '/css/style.css' | url | bust }}">
   
 </head> 
 <body>
