Changed line-height of headers and main font-size

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -16,8 +16,12 @@
     font-style: italic;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    line-height: 1.2;
+}
+
 body { 
-    font-family: Asap, sans-serif; font-size: 1.6rem;
+    font-family: Asap, sans-serif; font-size: 1.5rem;
     line-height: 1.4; 
 } 
 
