--- a/notes/index.njk
+++ b/notes/index.njk
@@ -4,6 +4,8 @@ eleventyExcludeFromCollections: true
 pageTitle: Notes
 ---
 
+<h1>{{pageTitle}}</h1>
+
 <p>This is the collection of all the notes I've written.</p>
 
 <ul>
