Added rel="me" to social links

--- a/index.njk
+++ b/index.njk
@@ -5,7 +5,7 @@ pageTitle: About me
 
 <p>Bernard Nijenhuis • Front-end Developer • Katwijk, The Netherlands • Father of 3 kids • Husband to 1 wife • Owner of 2 cats</p>
 
-<p>You can find me on <a href="https://twitter.com/bnijenhuis/">Twitter</a>, <a href="https://www.instagram.com/bnijenhuis/">Instagram</a>, <a href="https://www.linkedin.com/in/bernardnijenhuis/">LinkedIn</a> and <a href="https://github.com/bnijenhuis/">GitHub</a>.</p>
+<p>You can find me on <a href="https://twitter.com/bnijenhuis/" rel="me">Twitter</a>, <a href="https://www.instagram.com/bnijenhuis/" rel="me">Instagram</a>, <a href="https://www.linkedin.com/in/bernardnijenhuis/" rel="me">LinkedIn</a> and <a href="https://github.com/bnijenhuis/" rel="me">GitHub</a>.</p>
 
 <h2>Most recent notes</h2>
 <p>These are the 5 most recent notes. You can check out <a href="/notes/" title="All notes">all my notes</a> or follow the <a href="/feed.xml" title="Feed of all my notes">feed of all my notes</a>.</p>
