--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -10,6 +10,10 @@
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/manifest.webmanifest">
+  
+  <link rel="authorization_endpoint" href="https://indieauth.com/auth">
+  <link rel="webmention" href="https://webmention.io/bnijenhuis.nl/webmention" />
+  <link rel="pingback" href="https://webmention.io/bnijenhuis.nl/xmlrpc" />
 
   <link rel="stylesheet" href="{{ '/css/style.css' | url | bust }}">
   
