Added webmentions to notes

--- a/_includes/post-layout.liquid
+++ b/_includes/post-layout.liquid
@@ -2,10 +2,16 @@
 layout: layout.liquid
 ---
 
+<section>
+
 <h1>{{ pageTitle }}</h1>
 
 <p>Posted on: <time datetime="{{ page.date | postDate }}">{{ page.date | readablePostDate }}</time></p>
 
 {{ content }}
+
+</section>
+
+{% include webmentions %}
 
 <a href="/">Back to homepage</a>
