--- a/_includes/webmentions.liquid
+++ b/_includes/webmentions.liquid
@@ -65,7 +65,7 @@
                 
             }
 
-            if (webmentionRepostsArray != "") {
+            if (webmentionReplies != "") {
 
                 document.querySelector(".webmentions").insertAdjacentHTML("beforeend", webmentionReplies);
 
