--- a/_includes/webmentions.liquid
+++ b/_includes/webmentions.liquid
@@ -16,6 +16,78 @@
             addWebmentions(responseJson)
         );
 
+        // sites which are know to spam webmentions
+        // https://github.com/sw-yx/domainblocklist
+        let blocklist = [
+            'http://gadgetsearcher.com',
+            'https://pixallus.com',
+            'http://programming.yourworldin90seconds.com',
+            'https://programming.nichedomain.news',
+            'https://marketingsolution.com.au',
+            'https://programming.aplus-review.com',
+            'https://digitalapexgroup.com',
+            'https://technologynews.biz',
+            'https://worldtech.news',
+            'https://programming.webcloning.com',
+            'https://www.sacramentowebdesigngroup.com',
+            'https://htmltreehouse.com',
+            'https://1dmx.org',
+            'https://websitedesign-usa.com',
+            'https://techupd.com',
+            'https://fancyhints.com',
+            'https://techalertnews.com',
+            'https://buzzedly.com',
+            'https://dztechno.com',
+            'https://graphicdon.com',
+            'https://www.newsgosspis.com',
+            'http://www.digitasbuzz.in',
+            'https://gotutoral.com',
+            'https://wpguynews.com',
+            'https://www.klobal.net',
+            'http://www.webmastersgallery.com',
+            'https://pikopong.com',
+            'https://keren.link',
+            'https://ntdln.com',
+            'https://jczh.xyz',
+            'https://pazukong.wordpress.com',
+            'https://fullstackfeed.com',
+            'https://thebrandingstore.net',
+            'https://development-tools.net',
+            'https://itdirectory.my',
+            'https://www.sacramentowebdesigngroup.com',
+            'https://engrmks.com.ng',
+            'https://www.xspdf.com',
+            'http://isokunoffice.club', 
+            'http://dinezh.com', 
+            'http://www.makemoneyupdaters.com', 
+            'http://clicknow.in', 
+            'http://nexstair.com', 
+            'http://kovtonyuk.inf.ua', 
+            'http://postheaven.net', 
+            'http://www.legendstrivia.co.uk', 
+            'http://squareblogs.net', 
+            'http://www.fourthcity.net', 
+            'http://www.engrmks.com.ng', 
+            'http://711web.com', 
+            'http://techupd.com', 
+            'http://www.67nj.org', 
+            'http://tipsxd.com', 
+            'http://www.new.pixel-forge.ca', 
+            'http://pixallus.com', 
+            'http://wpnewshub.com', 
+            'http://tecriter.wordpressarena.com', 
+            'http://reddits.contractwebsites.com', 
+            'http://wawas-kingdom.com', 
+            'http://dztechno.com', 
+            'http://wpguynews.com', 
+            'http://www.digitasbuzz.in', 
+            'http://watchfvsslive.co', 
+            'http://gotutoral.com', 
+            'http://techfans.co.uk', 
+            'http://pikopong.com', 
+            'http://marketingsolution.com.au'
+        ];
+
         function addWebmentions(responseJson)
         {
             let webmentionLikesArray = [];
@@ -24,24 +96,28 @@
 
             responseJson.children.forEach(function (entry) { 
 
-                if (entry["wm-property"] == "like-of") {
+                if (!blocklist.includes(new URL(entry["wm-source"]).origin)) {
+
+                    if (entry["wm-property"] == "like-of") {
+                        
+                        webmentionLikesArray.push("<a href=\"" + entry.url + "\">" + entry.author.name + "</a>");
+
+                    } else if (entry["wm-property"] == "repost-of") {
+
+                        webmentionRepostsArray.push("<a href=\"" + entry.url + "\">" + entry.author.name + "</a>");
+
+                    } else if (entry["wm-property"] == "in-reply-to") {
+
+                        webmentionReplies += "<p>" + entry.author.name + " <a href=\"" + entry.url + "\">replied</a>: ";
+                        webmentionReplies += "\"" + entry.content.text + "\"</p>";
+
+                    } else if (entry["wm-property"] == "mention-of") {
+
+                        webmentionReplies += "<p>" + entry.author.name + " <a href=\"" + entry.url + "\">mentioned</a> this note: ";
+                        webmentionReplies += "\"" + entry.content.text + "\"</p>";
+
+                    }
                     
-                    webmentionLikesArray.push("<a href=\"" + entry.url + "\">" + entry.author.name + "</a>");
-
-                } else if (entry["wm-property"] == "repost-of") {
-
-                    webmentionRepostsArray.push("<a href=\"" + entry.url + "\">" + entry.author.name + "</a>");
-
-                } else if (entry["wm-property"] == "in-reply-to") {
-
-                    webmentionReplies += "<p>" + entry.author.name + " <a href=\"" + entry.url + "\">replied</a>: ";
-                    webmentionReplies += "\"" + entry.content.text + "\"</p>";
-
-                } else if (entry["wm-property"] == "mention-of") {
-
-                    webmentionReplies += "<p>" + entry.author.name + " <a href=\"" + entry.url + "\">mentioned</a> this note: ";
-                    webmentionReplies += "\"" + entry.content.text + "\"</p>";
-
                 }
 
             });
