Added twitter meta tags

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -15,6 +15,10 @@
   <meta property="og:image:secure_url" content="/img/default-preview.jpeg" />
   {% endif %}
 
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@bnijenhuis" />
+  <meta name="twitter:creator" content="@bnijenhuis" />
+
   <title>{% if page.url == "/" %}Bernard Nijenhuis • Front-end Developer{% else %}{{ pageTitle }}{% endif %} | bnijenhuis</title> 
   
   <link rel="icon" href="/favicon.ico">
