--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -15,7 +15,7 @@
   <meta property="og:image:secure_url" content="https://bnijenhuis.nl/img/default-preview.jpeg" />
   {% endif %}
 
-  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@bnijenhuis" />
   <meta name="twitter:creator" content="@bnijenhuis" />
 
