--- a/_includes/webmentions.liquid
+++ b/_includes/webmentions.liquid
@@ -6,15 +6,17 @@
 
         fetch("https://webmention.io/api/count?target=" + postUrl)
         .then(response => response.json())
-        .then(responseJson => 
-            document.querySelector(".webmentions h2").innerHTML += " (" + responseJson.count + ")"
-        );
+        .then(function (responseJson) {
+            
+            document.querySelector(".webmentions h2").innerHTML += " (" + responseJson.count + ")";
 
-        fetch("https://webmention.io/api/mentions.jf2?target=" + postUrl + "&sort-by=published&sort-dir=up")
-        .then(response => response.json())
-        .then(responseJson => 
-            addWebmentions(responseJson)
-        );
+            fetch("https://webmention.io/api/mentions.jf2?target=" + postUrl + "&sort-by=published&sort-dir=up&per-page=" + responseJson.count)
+            .then(response => response.json())
+            .then(responseJson => 
+                addWebmentions(responseJson)
+            );
+
+        });
 
         // sites which are know to spam webmentions
         // https://github.com/sw-yx/domainblocklist
