Added width and height (thanks for noticing Jan)

--- a/_includes/home-layout.liquid
+++ b/_includes/home-layout.liquid
@@ -2,7 +2,7 @@
 layout: layout.liquid
 ---
 
-<img class="logo" src="{{ '/img/bnijenhuis.svg' | url }}" alt="bnijenhuis" />
+<img class="logo" src="{{ '/img/bnijenhuis.svg' | url }}" alt="bnijenhuis" width="800" height="164" />
 
 <h1>{{ pageTitle }}</h1>
 
