Changed text on offline page

--- a/offline.njk
+++ b/offline.njk
@@ -1,6 +1,7 @@
 ---
 layout: home-layout.liquid
-pageTitle: Offline
+pageTitle: Sooo...this sucks
 ---
 
-<p>You don't seem to be connected to the internet at the moment and this page is currently not available for offline viewing.</p>
+<p>It looks like there's no internet connection at the moment. And to top it all off, the page that you wanted to view isn't available for offline viewing either.</p>
+<p>:(</p>
