Added logo to every page

--- a/index.njk
+++ b/index.njk
@@ -15,4 +15,4 @@ pageTitle: About me
     <li><a href="{{ note.url | url }}"><time datetime="{{ note.data.date | postDate }}">{{ note.data.date | readablePostDate }}</time> - {{ note.data.pageTitle }}</a></li>
 {% endfor %}
 </ul>
-<p><em>If you're wondering why the style is so basic I suggest you read my note about <a href="/notes/2021-03-01-unhurried-development/" title="Unhurried Development">Unhurried Development</a>.</em></p>
+<p>If you're wondering why the style is so basic I suggest you read my note about <a href="/notes/2021-03-01-unhurried-development/" title="Unhurried Development">Unhurried Development</a>.</p>
