--- a/notes/index.njk
+++ b/notes/index.njk
@@ -1,10 +1,8 @@
 ---
-layout: layout.liquid
+layout: index-layout.liquid
 eleventyExcludeFromCollections: true
 pageTitle: Notes
 ---
-
-<h1>{{pageTitle}}</h1>
 
 <p>This is the collection of all the notes I've written.</p>
 
@@ -13,5 +11,3 @@ pageTitle: Notes
     <li><a href="{{ note.url | url }}"><time datetime="{{ note.data.date | postDate }}">{{ note.data.date | readablePostDate }}</time> - {{ note.data.pageTitle }}</a></li>
 {% endfor %}
 </ul>
-
-<a href="/">Back to homepage</a>
