--- a/index.njk
+++ b/index.njk
@@ -3,7 +3,7 @@ layout: home-layout.liquid
 pageTitle: About me
 ---
 
-<p>Bernard Nijenhuis • Front-end Developer • Katwijk, The Netherlands • Father of 3 kids • Husband to 1 wife • Owner of 2 cats</p>
+<p>Bernard Nijenhuis • Front-end Developer • Katwijk, The Netherlands • Father of 3 kids • Husband to 1 wife • Owner of 1 cat</p>
 
 <p>You can find me on <a href="https://twitter.com/bnijenhuis/" rel="me">Twitter</a>, <a href="https://www.instagram.com/bnijenhuis/" rel="me">Instagram</a>, <a href="https://www.linkedin.com/in/bernardnijenhuis/" rel="me">LinkedIn</a> and <a href="https://github.com/bnijenhuis/" rel="me">GitHub</a>.</p>
 
