Updated tracker code

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -52,7 +52,6 @@
     _paq.push(["setDoNotTrack", true]);
     _paq.push(["disableCookies"]);
     _paq.push(['trackPageView']);
-    _paq.push(['enableLinkTracking']);
     (function() {
       var u="//matomo.bnijenhuis.nl/";
       _paq.push(['setTrackerUrl', u+'matomo.php']);
@@ -61,6 +60,9 @@
       g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
     })();
   </script>
+  <noscript>
+    <img referrerpolicy="no-referrer-when-downgrade" src="https://matomo.bnijenhuis.nl/matomo.php?idsite=1&amp;rec=1" style="border:0" alt="" />
+  </noscript>
   <!-- End Matomo Code -->
 
 </body> 
