Fixed liquid include (needs quotation)

--- a/_includes/post-layout.liquid
+++ b/_includes/post-layout.liquid
@@ -10,6 +10,6 @@ layout: layout.liquid
 
 {{ content }}
 
-{% include webmentions %}
+{% include 'webmentions' %}
 
 <a href="/">Back to homepage</a>
