Added titles to links

--- a/_includes/collection-layout.liquid
+++ b/_includes/collection-layout.liquid
@@ -6,4 +6,4 @@ layout: layout.liquid
 
 {{ content }}
 
-<a href="/">Back to homepage</a>
+<a href="/" title="Back to homepage">Back to homepage</a>
