--- a/_includes/post-layout.liquid
+++ b/_includes/post-layout.liquid
@@ -12,4 +12,4 @@ layout: layout.liquid
 
 {% include 'webmentions' %}
 
-<a href="/">Back to homepage</a>
+<a href="/" title="Back to homepage">Back to homepage</a>
