--- a/index.njk
+++ b/index.njk
@@ -5,7 +5,7 @@ pageTitle: About me
 
 <p>Bernard Nijenhuis • Front-end Developer • Katwijk, The Netherlands • Father of 3 kids • Husband to 1 wife • Owner of 1 cat</p>
 
-<p>You can find me on <a href="https://twitter.com/bnijenhuis/" rel="me">Twitter</a>, <a href="https://mastodon.social/@bnijenhuis" rel="me">Mastodon</a>, <a href="https://www.instagram.com/bnijenhuis/" rel="me">Instagram</a>, <a href="https://www.linkedin.com/in/bernardnijenhuis/" rel="me">LinkedIn</a> and <a href="https://github.com/bnijenhuis/" rel="me">GitHub</a>.</p>
+<p>You can find me on <a href="https://twitter.com/bnijenhuis/" rel="me" title="Twitter">Twitter</a>, <a href="https://mastodon.social/@bnijenhuis" rel="me" title="Mastodon">Mastodon</a>, <a href="https://www.instagram.com/bnijenhuis/" rel="me" title="Instagram">Instagram</a>, <a href="https://www.linkedin.com/in/bernardnijenhuis/" rel="me" title="LinkedIn">LinkedIn</a> and <a href="https://github.com/bnijenhuis/" rel="me" title="GitHub">GitHub</a>.</p>
 
 <h2>Most recent notes</h2>
 <p>These are the 5 most recent notes. You can check out <a href="/notes/" title="All notes">all my notes</a> or follow the <a href="/feed.xml" title="Feed of all my notes">feed of all my notes</a>.</p>
