Added font fallback and preload web font

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -31,6 +31,8 @@
   <link rel="webmention" href="https://webmention.io/bnijenhuis.nl/webmention" />
   <link rel="pingback" href="https://webmention.io/bnijenhuis.nl/xmlrpc" />
 
+  <link rel="preload" href="/fonts/Asap-VariableFont_wght.woff2" as="font" type="font/woff2" crossorigin>
+
   <link rel="stylesheet" href="{{ '/css/style.css' | url | bust }}">
   
 </head> 
