Finetuning to themes

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -4,7 +4,7 @@
   <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1" /> 
   <meta name="description" content="Bernard Nijenhuis • Front-end Developer • Katwijk, The Netherlands • Father of 3 kids • Husband to 1 wife • Owner of 2 cats" />
-  <meta name="theme-color" content="#ffffff" />
+  <meta name="theme-color" content="#1f2020" />
 
   <meta property="og:title" content="{% if page.url == "/" %}Bernard Nijenhuis • Front-end Developer{% else %}{{ pageTitle }}{% endif %}" />
   <meta property="og:url" content="{{ page.url }}" />
