--- a/_includes/themes.liquid
+++ b/_includes/themes.liquid
@@ -1,6 +1,6 @@
 <div class="themes" hidden>
     <fieldset>
-        <legend class="sr-only">Themes</legend>
+        <legend>themes</legend>
         <button class="system-mode" aria-pressed="false" data-theme="system">{{ '/img/system.svg' | printFileContents }}<span class="sr-only">System preference<span></button>
         <button class="light-mode" aria-pressed="false" data-theme="light">{{ '/img/sun.svg' | printFileContents }}<span class="sr-only">Light mode<span></button>
         <button class="dark-mode" aria-pressed="false" data-theme="dark">{{ '/img/moon.svg' | printFileContents }}<span class="sr-only">Dark mode<span></button>
