--- a/index.njk
+++ b/index.njk
@@ -12,7 +12,7 @@ pageTitle: About me
 <ul>
 {% set notes = collections.notes | reverse %}
 {% for note in notes.slice(0, 5) %}
-    <li><a href="{{ note.url | url }}" title="{{ note.data.date | readablePostDate }} - {{ note.data.pageTitle }}"><time datetime="{{ note.data.date | postDate }}">{{ note.data.date | readablePostDate }}</time> - {{ note.data.pageTitle }}</a></li>
+    <li><a href="{{ note.url | url }}"><time datetime="{{ note.data.date | postDate }}">{{ note.data.date | readablePostDate }}</time> - {{ note.data.pageTitle }}</a></li>
 {% endfor %}
 </ul>
 <p>If you're wondering why the style is so basic I suggest you read my note about <a href="/notes/2021-03-01-unhurried-development/">Unhurried Development</a>.</p>
