Added layout to collection layout

--- a/_includes/collection-layout.liquid
+++ b/_includes/collection-layout.liquid
@@ -2,8 +2,17 @@
 layout: layout.liquid
 ---
 
-<div class="logo"><a href="/" title="Back to homepage">{{ '/img/bnijenhuis.svg' | printFileContents }}</a></div>
+<header>
+    <div class="logo">
+        <a href="/" title="Back to homepage">{{ '/img/bnijenhuis.svg' | printFileContents }}</a>
+    </div>
+    {% include 'themes' %}
+</header>
 
-{{ content }}
+<main>
 
-<a href="/" title="Back to homepage">Back to homepage</a>
+    {{ content }}
+
+    <a href="/" title="Back to homepage">Back to homepage</a>
+
+</main>
