Changed format and style of webmentions

--- a/_includes/collection-layout.liquid
+++ b/_includes/collection-layout.liquid
@@ -13,6 +13,8 @@ layout: layout.liquid
 
     {{ content }}
 
-    <a href="/" title="Back to homepage">Back to homepage</a>
-
 </main>
+
+<footer>
+    <a href="/" title="Back to homepage">Back to homepage</a>
+</footer>
